# letsquant

./: .gitignore  Makefile  README.md  environment.yml  project_state.md  pyproject.toml
configs/: a_share_midterm.json  fills.example.csv  live_portfolio.example.json  sample_backtest.json
data/sample/: 000001.SZ.csv
docs/: data_providers.md  git_workflow.md  strategy_playbook.md
scripts/: git-local
src/letsquant/: __init__.py  __main__.py  benchmark.py  cli.py  config.py  indicators.py  models.py  reports.py
src/letsquant/data/: __init__.py  adjusted_price.py  csv_source.py  tushare_source.py  universe.py
src/letsquant/execution/: __init__.py  backtester.py  fills.py  instructions.py
src/letsquant/strategies/: __init__.py  base.py  factory.py  trend_breakout.py
tests/: test_adjusted_price.py  test_backtester.py  test_benchmark.py  test_data_sync.py  test_fills.py  test_indicators.py  test_instructions.py  test_universe.py  test_validation.py
